// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hue renders correctly 1`] = `
<div
  className="hue-picker "
  style={
    {
      "height": "16px",
      "position": "relative",
      "width": "316px",
    }
  }
>
  <div
    style={
      {
        "borderRadius": undefined,
        "boxShadow": undefined,
        "inset": "0px",
        "position": "absolute",
      }
    }
  >
    <div
      className="hue-horizontal"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "borderRadius": undefined,
          "height": "100%",
          "padding": "0 2px",
          "position": "relative",
        }
      }
    >
      <style>
        
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
      </style>
      <div
        style={
          {
            "left": "69.44444444444443%",
            "position": "absolute",
            "top": undefined,
          }
        }
      >
        <div
          style={
            {
              "backgroundColor": "rgb(248, 248, 248)",
              "borderRadius": "50%",
              "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "height": "18px",
              "transform": "translate(-9px, -1px)",
              "width": "18px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Hue renders vertically 1`] = `
<div
  className="hue-picker "
  style={
    {
      "height": 200,
      "position": "relative",
      "width": 20,
    }
  }
>
  <div
    style={
      {
        "borderRadius": undefined,
        "boxShadow": undefined,
        "inset": "0px",
        "position": "absolute",
      }
    }
  >
    <div
      className="hue-vertical"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "borderRadius": undefined,
          "height": "100%",
          "padding": "0 2px",
          "position": "relative",
        }
      }
    >
      <style>
        
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
      </style>
      <div
        style={
          {
            "left": "0px",
            "position": "absolute",
            "top": "30.55555555555557%",
          }
        }
      >
        <div
          style={
            {
              "backgroundColor": "rgb(248, 248, 248)",
              "borderRadius": "50%",
              "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "height": "18px",
              "transform": "translate(-3px, -9px)",
              "width": "18px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HuePointer renders correctly 1`] = `
<div
  style={
    {
      "backgroundColor": "rgb(248, 248, 248)",
      "borderRadius": "50%",
      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "height": "18px",
      "transform": "translate(-9px, -1px)",
      "width": "18px",
    }
  }
/>
`;
